// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputSearch default 1`] = `
.c2 {
  width: 20px;
  height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c2 svg {
  height: 100%;
  width: 100%;
}

.c3 {
  background: transparent;
  border: none;
  caret-color: #262D33;
  color: inherit;
  height: 100%;
  outline: none;
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 0.875rem;
  max-width: 100%;
  min-width: 2rem;
  padding: 0 0.5rem;
}

.c3::-webkit-search-decoration,
.c3::-webkit-search-cancel-button,
.c3::-webkit-search-results-button,
.c3::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3::-webkit-input-placeholder {
  color: #939BA5;
}

.c3::-moz-placeholder {
  color: #939BA5;
}

.c3:-ms-input-placeholder {
  color: #939BA5;
}

.c3::placeholder {
  color: #939BA5;
}

.c1 {
  padding-left: 0.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #939BA5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  pointer-events: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #262D33;
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  padding: 0.125rem 0.25rem;
  width: 100%;
  height: 36px;
  background: #FFFFFF;
  border: 1px solid #DEE1E5;
  border-radius: 0.25rem;
  color: #343C42;
  font-size: 0.875rem;
}

.c0 .c4 {
  height: 100%;
  max-width: 100%;
  width: 100%;
}

.c0 .c4 input,
.c0 .c4 span {
  padding: 0 0.5rem;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus,
.c0:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

<div
  className="c0"
  onMouseDown={[Function]}
>
  <div
    className="c1"
  >
    <div
      aria-hidden={true}
      className="c2"
    >
      <svg
        fill="currentColor"
        height="100%"
        viewBox="0 0 24 24"
        width="100%"
      >
        <path
          d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0016 9.5 6.5 6.5 0 109.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <input
    className="c3"
    onChange={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`InputSearch hideSearchIcon removes the icon 1`] = `
.c1 {
  background: transparent;
  border: none;
  caret-color: #262D33;
  color: inherit;
  height: 100%;
  outline: none;
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 0.875rem;
  max-width: 100%;
  min-width: 2rem;
  padding: 0 0.5rem;
}

.c1::-webkit-search-decoration,
.c1::-webkit-search-cancel-button,
.c1::-webkit-search-results-button,
.c1::-webkit-search-results-decoration {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c1::-webkit-input-placeholder {
  color: #939BA5;
}

.c1::-moz-placeholder {
  color: #939BA5;
}

.c1:-ms-input-placeholder {
  color: #939BA5;
}

.c1::placeholder {
  color: #939BA5;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #262D33;
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  padding: 0.125rem 0.25rem;
  width: 100%;
  height: 36px;
  background: #FFFFFF;
  border: 1px solid #DEE1E5;
  border-radius: 0.25rem;
  color: #343C42;
  font-size: 0.875rem;
}

.c0 .c2 {
  height: 100%;
  max-width: 100%;
  width: 100%;
}

.c0 .c2 input,
.c0 .c2 span {
  padding: 0 0.5rem;
}

.c0:hover {
  border-color: #C1C6CC;
}

.c0:focus,
.c0:focus-within {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

<div
  className="c0"
  onMouseDown={[Function]}
>
  <input
    className="c1"
    onChange={[Function]}
    type="text"
    value=""
  />
</div>
`;
